ポケモン一覧取得処理作成中

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "concurrently": "^5.2.0",
-    "express": "^4.17.1"
+    "csv": "^5.3.2",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security"
   }
 }
