--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "concurrently": "^5.2.0",
     "csv": "^5.3.2",
     "express": "^4.17.1",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "inversify": "^5.0.1",
+    "reflect-metadata": "^0.1.13"
   }
 }
